--- a/Main_Screen/changePlant.html
+++ b/Main_Screen/changePlant.html
@@ -2,7 +2,108 @@
 <html>
   <head>
     <title>&Auml;ndere Topf</title>
-    <link rel="stylesheet" type="text/css" href="C:\Coden\KraeutertreppeWebserver\CSS\main.css" media="screen">
+    <style media="screen">
+      body{font-family: Arial, Helvetica, sans-serif;}
+
+      *{
+        box-sizing: border-box;
+      }
+
+      .container{
+        position: relative;
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px 0 30px 0;
+      }
+      input,
+      .btn {
+        width: 100%;
+        padding: 14px;
+        border: none;
+        border-radius: 4px;
+        margin: 5px 0;
+        opacity: 0.85;
+        display: inline-block;
+        font-size: 17px;
+        line-height: 20px;
+        text-decoration: none;
+        /* remove underline from anchors */
+      }
+      h1{
+        background-color: #4CAF50;
+        border-radius: 5px;
+        color: white;
+        padding: 20px;
+        text-align:center;
+      }
+      /*Button*/
+      input[type="button"],
+      input[type="submit"],
+      button,
+      .button {
+        background-color: #4CAF50;
+        color: white;
+        border-radius: 5px;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 200px
+      }
+      button:hover{
+        opacity: 0.8;
+      }
+
+      .col{
+        float: left;
+        width: 50%;
+        margin: auto;
+        padding: 0 50px;
+        margin-top: 6px;
+      }
+
+
+      .row:after {
+        content: "";
+        display: table;
+        clear: both;
+      }
+
+      .vl {
+        position: absolute;
+        left: 50%;
+        transform: translate(-50%);
+        border: 2px solid #ddd;
+        height: 270px;
+      }
+
+      .vl-innertext {
+        position: absolute;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #f1f1f1;
+        border: 1px solid #ccc;
+        border-radius: 50%;
+        padding: 8px 10px;
+      }
+
+      @media screen and (max-width: 800px) {
+          .col {
+            width: 100%;
+            margin-top: 0;
+          }
+          /* hide the vertical line */
+          .vl {
+            display: none;
+          }
+          /* show the hidden text on small screens */
+          .hide-md-lg {
+            display: block;
+            text-align: center;
+          }
+      }
+
+    </style>
     <script>
     // number of pot that shall be changed
     var selectedPot = -999;
